[gd_scene load_steps=5 format=3 uid="uid://ca1er6yso3wt0"]

[ext_resource type="Script" path="res://Objects/Guardian.gd" id="1_rq71a"]
[ext_resource type="PackedScene" uid="uid://bsloe4rthghr6" path="res://Objects/InteractionIndicator.tscn" id="2_bjlge"]
[ext_resource type="Texture2D" uid="uid://dvfaxhqef1dcj" path="res://Assets/cemetaryTiles.png" id="2_feb4b"]
[ext_resource type="Texture2D" uid="uid://jytq0lfmeqms" path="res://Assets/dungeonTiles.png" id="3_4abq7"]

[node name="Guardian" type="Area2D"]
script = ExtResource("1_rq71a")

[node name="Statue" type="Sprite2D" parent="."]
texture = ExtResource("2_feb4b")
region_enabled = true
region_rect = Rect2(117, 86, 22, 42)

[node name="GemGold" type="Sprite2D" parent="."]
visible = false
position = Vector2(-5, -2)
texture = ExtResource("3_4abq7")
region_enabled = true
region_rect = Rect2(244, 4, 8, 8)

[node name="GemPurple" type="Sprite2D" parent="."]
visible = false
position = Vector2(5, -2)
texture = ExtResource("3_4abq7")
region_enabled = true
region_rect = Rect2(244, 20, 8, 8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="InteractionIndicator" parent="." instance=ExtResource("2_bjlge")]
visible = false
